crates/lang/tests/ui/contract/fail/message-self-receiver-invalid-02.stderr
error: ink! messages must have `&self` or `&mut self` receiver
  --> tests/ui/contract/fail/message-self-receiver-invalid-02.rs:15:24
   |
15 |         pub fn message(this: &mut Self) {}
   |                        ^^^^
